--- a/servicios.html
+++ b/servicios.html
@@ -4,7 +4,7 @@
 	<title>SERVICIOS</title>
 </head>
 <body>
-	<h1>VERSION A, Servicios</h1>
+	<h1>VERSION B, version2, Servicios</h1>
 	<h1> Estudiante de AD2, 201213562</h1>
 </body>
 </html>
