--- a/nosotros.html
+++ b/nosotros.html
@@ -4,7 +4,7 @@
 	<title>NOSOTROS</title>
 </head>
 <body>
-	<h1>VERSION A</h1>
+	<h1>VERSION 1</h1>
 	<h1> Estudiante de AD2, 201213562</h1>
 </body>
 </html>
