--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
 	<title>index.html</title>
 </head>
 <body>
-	<h1> version B, version2 index</h1>
+	<h1>VERSION 1</h1>
+	<h1> version A, index</h1>
 </body>
 </html>
