--- a/contactos.html
+++ b/contactos.html
@@ -4,10 +4,10 @@
 	<title>CONTACTOS</title>
 </head>
 <body>
+	<h1>VERSION 1</h1>
 	<h1>Luis Fernando Ramirez Santos</h1>
 	<h2>201213562</h2>
 	<h2>rluis4490@gmail.com</h2>
 	<h1> Estudiante de AD2, 201213562</h1>
-	<h1>Version2</h1>
 </body>
 </html>
